# test-esp-hal-crc

./: Cargo.toml
src/: main.rs
